-average_grade method added
