# swagger_server/swagger/swagger.yaml
@@ -91,6 +91,32 @@ paths:
         "409":
           description: Already exists
       x-openapi-router-controller: swagger_server.controllers.default_controller
+  /student/{student_id}/average_grade:
+      get:
+        summary: gets the average grade of a student
+        description: Returns the average grade of the student with id 'student_id'.
+        operationId: get_student_average_grade
+        parameters:
+        - name: student_id
+          in: path
+          description: the uid
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+        responses:
+          "200":
+            description: Successful operation
+            content:
+              application/json:
+                schema:
+                  type: number
+                  format: float
+                  example: 8.5
+          "404":
+            description: Student does not exist or has no grades
+        x-openapi-router-controller: swagger_server.controllers.default_controller
 components:
   schemas:
     Student:
